MFH: - fixed bug #24548 (get_browser() does not return platform)